--- a/SRC/My-Zone/My-Zone/Main.storyboard
+++ b/SRC/My-Zone/My-Zone/Main.storyboard
@@ -380,7 +380,7 @@
             <objects>
                 <navigationController id="rR8-qU-2Sp" customClass="MMBaseNavigationController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="测试" id="0f0-8Q-Auy"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="k2u-mj-p1p">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="k2u-mj-p1p">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -397,7 +397,7 @@
             <objects>
                 <tableViewController id="k25-PW-4SV" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="z0Q-Vq-By9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
@@ -480,25 +480,25 @@
                         <viewControllerLayoutGuide type="bottom" id="bUH-Ji-aTN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" misplaced="YES" id="jUd-xU-I5f">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyV-h0-s2i">
-                                <rect key="frame" x="56" y="84" width="263" height="40"/>
+                                <rect key="frame" x="56" y="20" width="263" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Hk8-NB-you"/>
                                 </constraints>
                                 <state key="normal" title="上传"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hwT-ja-0oh">
-                                <rect key="frame" x="56" y="144" width="263" height="40"/>
+                                <rect key="frame" x="56" y="80" width="263" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="m16-pJ-lAE"/>
                                 </constraints>
                                 <state key="normal" title="下载"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjy-Bb-821">
-                                <rect key="frame" x="56" y="204" width="263" height="40"/>
+                                <rect key="frame" x="56" y="140" width="263" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="nbn-Nz-DlZ"/>
                                 </constraints>
@@ -508,14 +508,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5p0-Hx-GeQ">
-                                <rect key="frame" x="56" y="264" width="263" height="40"/>
+                                <rect key="frame" x="56" y="200" width="263" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="jkv-uc-sYX"/>
                                 </constraints>
                                 <state key="normal" title="进度"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoB-pr-iQH">
-                                <rect key="frame" x="56" y="324" width="263" height="40"/>
+                                <rect key="frame" x="56" y="260" width="263" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="ZQZ-EW-tvY"/>
                                 </constraints>
@@ -556,7 +556,7 @@
                         <viewControllerLayoutGuide type="bottom" id="KdI-i0-F6g"/>
                     </layoutGuides>
                     <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="df3-IV-VJI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
